<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:background="@drawable/backgroundimg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="547dp"
        android:layout_marginBottom="184dp"
        android:background="#753E3A3A" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            app:srcCompat="@drawable/food" />

        <TextView
            android:id="@+id/cafehouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cafe_house"
            android:textColor="#F8F5F5"
            android:textColorHint="#F8E6DFDF"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/startcolorgradient"
            android:freezesText="false"
            android:padding="10dp"
            android:text="@string/in"
            android:textColor="#F6EFEF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/startcolorgradient"
            android:freezesText="false"
            android:padding="10dp"
            android:text="@string/Reg"
            android:textColor="#F6EFEF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:freezesText="false"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/skp"
            android:textColor="#EDE8E8"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>