<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUp_Activity"
    android:orientation="vertical"
    >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
        tools:ignore="UselessParent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/girl"
                app:civ_border_color="@color/endcolorgradient"
                app:civ_border_width="2dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/Upload_Image"
                android:textColorHint="#101010"
                android:textStyle="bold"/>

            <View
                android:id="@+id/view"
                android:layout_width="90dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#090909" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@color/cardview_light_background"
            android:ems="10"
            android:gravity="center"
            android:hint="User Name"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/User_Name"
            android:textColor="#CFC8C8"
            tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:background="@color/cardview_light_background"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/_917624051033"
                android:inputType="phone"
                android:padding="10dp"
                android:autofillHints=""/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:background="@color/cardview_light_background"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Patelramish07_Gmail_Com"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:background="@color/cardview_light_background"
                android:ems="10"
                android:gravity="center"
                android:hint=".........."
                android:inputType="textPassword"
                android:padding="10dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/Register"
                android:textColor="#F3EDED"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Or_With"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/fbcolor"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Facebook"
                    android:textColor="#F4F3F3"
                    app:drawableLeftCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="#FF5722"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/Google"
                    android:textColor="#F3EBEB"
                    app:drawableStartCompat="@drawable/googleplus"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Already_Have_Accout_Login"
                android:textColor="#101010"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
